# msckf_study

./: .gitignore  CMakeLists.txt  homework.cpp
.devcontainer/: Dockerfile  devcontainer.json
include/: msckf_math.h  optimizer.h
src/: run_SE3_update.cpp  run_joint_optimizer.cpp  run_optimizer.cpp
